<resources>
    <string name="app_name">TrackMe</string>
    <string name="notification_history">Notification History</string>
    <string name="add_geofence">Add Geofence</string>
    <string name="geofence_radius">Geofence radius</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="enter_radius">Enter radius in m</string>
    <string name="enter_geofence_name">Enter geofence name</string>
    <string name="empty_error">Please enter a value</string>
    <string name="invalid_value_error">Invalid value</string>
    <string name="please_enable_gps">Please enable gps</string>
    <string name="enable_significant_motion_strategy">Enable significant motion strategy(Experimental)</string>

</resources>
