<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_geofence"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_geofence_name"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_radius"
            android:inputType="number"
            android:textColor="@android:color/black"
             />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />


    </LinearLayout>
</LinearLayout>